<resources>
    <string name="app_name">Zenith</string>
    <string name="zenith">Zenith</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Item</string>
    <string name="classschedule">Class Schedule</string>
    <string name="trainingprogram">Training Program</string>
    <string name="leaveapp">Leave Application</string>
    <string name="payroll">Payroll</string>
    <string name="profile">Profile</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="error_nointernet">Please check your internet connection.</string>
    <string name="annualleave">Annual Leave</string>
    <string name="jobsshifts1">Jobs &amp; Shifts</string>
    <string name="medicalleave">Medical Leave</string>
    <string name="unpaidleave">Unpaid Leave</string>
    <string name="leaveapplication">Leave Application</string>
    <string name="applyfor">Apply for</string>
    <string name="uploadimage"><u>Upload Image</u>.</string>
    <string name="wrongusernameorpassword">Wrong username or password</string>
    <string name="insertsuccessfully">Record Is Inserted Successfully...</string>
    <string name="post">Post</string>
    <string name="logindetailtextview">Login Details :</string>
    <string name="nametexview">Name : </string>
    <string name="loginemailtextview">Login Email : </string>
    <string name="changepasswordtextview">Change password :</string>
    <string name="passwordrtextview">Password : </string>
    <string name="confirmpasswordtextview">Confirm Password:</string>
    <string name="hint_nameteditextview">Hello</string>
    <string name="hint_emailedittextview">Hello@zenithbadminton.com.sg</string>
    <string name="hint_passwordedittext">Password </string>
    <string name="hint_confirmpasswordedittext">Confirm Password</string>
    <string name="classschedules1">Class Schedules</string>
    <string name="trainingprogram1">Training Program</string>
    <string name="leaveapplication1">Leave Application</string>
    <string name="payroll1">Payroll</string>
    <string name="profile1">Profile</string>
    <string name="studenthome1">Home</string>
    <string name="studenttraining2">Training Program</string>
    <string name="studenthistory3">History</string>
    <string name="studentprofile4">Profile</string>
    <string-array name="leaveType">
        <item>@string/annualleave</item>
        <item>@string/medicalleave</item>
        <item>@string/unpaidleave</item>
    </string-array>
    <string-array name="navigationitems">
        <item>@string/classschedule</item>
        <item>@string/trainingprogram</item>
        <item>@string/leaveapp</item>
        <item>@string/payroll</item>
        <item>@string/profile1</item>
        <item>@string/logout</item>
    </string-array>
    <string-array name="adminnavigationitem_admintext">
        <item>@string/classschedules1</item>
        <item>@string/jobsshifts1</item>
        <item>@string/trainingprogram1</item>
        <item>@string/leaveapplication1</item>
        <item>@string/payroll1</item>
        <item>@string/profile1</item>
        <item>@string/logout</item>
    </string-array>
    <integer-array name="adminnavigationitems_adminimage">
        <item>@drawable/ic_home</item>
        <item>@drawable/adminjobsandshifticon</item>
        <item>@drawable/ic_traning</item>
        <item>@drawable/ic_leave</item>
        <item>@drawable/ic_payroll</item>
        <item>@drawable/ic_user_navigation</item>
        <item>@drawable/ic_logout</item>
    </integer-array>
    <!--Student-->
    <string-array name="studentnavigationitem_admintext">
        <item>@string/studenthome1</item>
        <item>@string/studenttraining2</item>
        <item>@string/studenthistory3</item>
        <item>@string/studentprofile4</item>
        <item>@string/logout</item>


    </string-array>
    <integer-array name="studentnavigationitems_adminimage">
        <item>@drawable/studenthome</item>
        <item>@drawable/ic_traning</item>
        <item>@drawable/studenthistory</item>
        <item>@drawable/ic_user_navigation</item>
        <item>@drawable/ic_logout</item>

    </integer-array>
    <integer-array name="navigationitems_image">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_traning</item>
        <item>@drawable/ic_leave</item>
        <item>@drawable/ic_payroll</item>
        <item>@drawable/ic_user_navigation</item>
        <item>@drawable/ic_logout</item>
    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="classschedual_viewmore">VIEW MORE</string>
    <string name="classschedual_totatlemployees">Total Employees</string>
    <string name="classschedual_totatlawards">Total Awards</string>
    <string name="classschedual_totatlstudent">Total Students</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="studenthomeranklist">Ranking list</string>
    <string name="studenthomegameswon">Games Won</string>
    <string name="studenttxthistory">history</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="admin_training_addpostbtn">Post</string>
    <string name="simple_ime" />
    <string name="logout">Logout</string>
    <string name="plus">+</string>
    <string name="shift_circle_txtcolor_redark1">Choose your color</string>
    <string name="jobs">Jobs</string>
    <string name="hours">Hours</string>
    <string name="pays">Pays</string>


    <string name="str_hourlyratetxt">hourly rate</string>
    <string name="str_Starttxt">Start</string>
    <string name="str_Endtxt">End</string>
    <string name="str_Hourstxt"> Hours</string>
    <string name="str_shiftcolortxt">Choose your color</string>
    <string name="shift_unpaid_button">+ Unpaid Break</string>
    <string name="str_myjobtxt">My Job</string>
    <string name="str_shiftnamehinttxt">Shift name</string>
    <string name="str_ratetxt">$</string>
    <string name="str_houreratehinttxt">00.0</string>
</resources>
