<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shift_page_bg"
    android:orientation="vertical">

    <include layout="@layout/jobsandshift_cust_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/jobsandshift_colorshowactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jobsandshiftactivity_eventusername0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/shift__name_label_1"
                android:gravity="center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/str_myjobtxt"
                android:textColor="@color/shift__name_label_color_white" />

            <EditText
                android:id="@+id/jobsandshiftactivity_edit_eventname2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_30sdp"
                android:gravity="center_horizontal"
                android:hint="@string/str_shiftnamehinttxt"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="2dp" />


            <TextView
                android:id="@+id/jobsandshiftactivity_edit_eventcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/str_shiftcolortxt"
                android:textColor="@color/button_blue"
                android:textSize="@dimen/_15sdp"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jobsandshiftactivity_edit_eventhours3"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/jobsandshiftactivity_hourtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/str_Hourstxt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/jobsandshiftactivity_edit_starttime4"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/circle_blue"
                    android:elevation="@dimen/_4sdp"
                    android:gravity="center"
                    android:hint="@string/str_Starttxt"
                    android:textColor="@color/shift__name_label_color_white"
                    android:textColorHint="@color/shift__name_label_color_white"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/shift_big_circle_bg" />

                <TextView
                    android:id="@+id/jobsandshiftactivity_edit_endtime5"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/circle_blue"
                    android:elevation="@dimen/_4sdp"
                    android:gravity="center"
                    android:hint="@string/str_Endtxt"
                    android:textColor="@color/shift__name_label_color_white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <TextView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/adminjobshift_arrowimage" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_ratetxt" />

                <EditText
                    android:id="@+id/jobsandshiftactivity_editeventhoursrate6"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_houreratehinttxt"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/str_hourlyratetxt"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/jobsand_shift_btnunpaidbreak11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:textAllCaps="false"
                android:background="@drawable/shift_unpaide_round_blue_button"
                android:text="@string/shift_unpaid_button"
                android:textColor="@color/shift_big_circle_bg"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>