<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="app.com.zenithemployee.EmployeeProfileFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:background="@drawable/image_bg"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_fragment_profile_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/image_profile_about" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/profile_fragment_profile_login_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:src="@drawable/profilelockimage" />

                    <TextView
                        android:id="@+id/profile_fragment_text_logindetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logindetailtextview"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:background="@drawable/image_selectorline"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_47sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_fragment_profile_textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/nametexview"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        android:id="@+id/employeeprofile_fragment_edittext_name"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/activity_main_edittext_bg"
                        android:ems="10"
                        android:hint="@string/hint_nameteditextview"
                        android:inputType="text"
                        android:padding="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <TextView

                        android:id="@+id/profile_fragment_emailtextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/loginemailtextview"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        android:id="@+id/employeeprofile_fragment_edittext_email"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:background="@drawable/activity_main_edittext_bg"
                        android:ems="10"
                        android:hint="@string/hint_emailedittextview"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/image_selectorline"></LinearLayout>

                <Button
                    android:id="@+id/employeeprofile_fragment_button_login_update"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/activity_main_button_bg"
                    android:textSize="20dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/profile_fragment_password_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_17sdp"
                        android:src="@drawable/profilekeyimage" />

                    <TextView
                        android:id="@+id/profile_fragment_text_changepassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/changepasswordtextview"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:background="@drawable/image_selectorline"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_47sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/profile_fragment_textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/passwordrtextview"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        android:id="@+id/employeeprofile_fragment_edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/activity_main_edittext_bg"
                        android:ems="10"
                        android:hint="@string/hint_passwordedittext"
                        android:inputType="textPassword"
                        android:padding="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_28sdp"
                    android:orientation="horizontal">
                    <!--android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_30sdp"-->

                    <TextView
                        android:id="@+id/profile_fragment_textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/confirmpasswordtextview"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        android:id="@+id/employeeprofile_fragment_edittext_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/activity_main_edittext_bg"
                        android:ems="10"
                        android:hint="@string/hint_confirmpasswordedittext"
                        android:inputType="textPassword"
                        android:padding="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_selectorline" />
                </LinearLayout>

                <Button
                    android:id="@+id/employeeprofile_fragment_button_changepassword_update"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/activity_main_button_bg" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

