<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        tools:context="app.com.zenithemployee.Fragment.PayrollFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_calendar_previousmonth"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_blue_left" />

            <TextView
                android:id="@+id/activity_calendar_monthname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Calendar"
                android:textColor="#1765BB"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activity_calendar_nextmonth"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_blue_right" />

        </LinearLayout>

        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            android:id="@+id/admin_compactcalendar_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:compactCalendarBackgroundColor="#df7e7e"
            app:compactCalendarCurrentDayBackgroundColor="#3fe745"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#46cef7"
            app:compactCalendarTextColor="#1765BB"
            app:compactCalendarTextSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Date   :-" />

            <TextView
                android:id="@+id/adminpayroll_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End Date    :-" />

            <TextView
                android:id="@+id/adminpayroll_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/jobs"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hours"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pays"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <ListView
            android:id="@+id/employpayroll_fragment_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/txttotal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Total"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/payroll_emptotalhour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/payroll_emptotalprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0.00"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>